// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Buttons Default Rendering snapshot 1`] = `
<button
  className="Button"
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  type="button"
>
  <span
    className="Button__content"
  >
    test button
  </span>
</button>
`;

exports[`Test Buttons Icon Rendering snapshot 1`] = `
<Button
  icon={true}
  label=""
  onClick={[Function]}
  type="button"
>
  <Icon
    fontSize={14}
    name="plus"
  />
</Button>
`;

exports[`Test Buttons IconLabel Rendering snapshot 1`] = `
<Button
  iconLabel={true}
  label=""
  onClick={[Function]}
  type="button"
>
  <span
    className="Button__icon-content"
  >
    <Icon
      fontSize={12}
      name="plus"
    />
  </span>
  <span
    className="Button__label-content"
  >
    test button
  </span>
</Button>
`;
